cfn_benchmark/cfn_templates/shiopon01__aws-cf-templates/AutoScaling-ALB-1/WebServiceVPC-NoELBS.yml
AWSTemplateFormatVersion: 2010-09-09
Description: VPC and Subnet Create

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Project Name Prefix
        Parameters:
          - ProjectName
      - Label:
          default: Network Configuration
        Parameters:
          - VPCCidr
          - PublicWebSubnet1Cidr
          - PublicWebSubnet2Cidr
          - DBSubnet1Cidr
          - DBSubnet2Cidr
    ParameterLabels:
      VPCCidr:
        default: VPC Cidr
      PublicWebSubnet1Cidr:
        default: PublicWebSubnet1 Cidr
      PublicWebSubnet2Cidr:
        default: PublicWebSubnet2 Cidr
      DBSubnet1Cidr:
        default: DBSubnet1 Cidr
      DBSubnet2Cidr:
        default: DBSubnet2 Cidr

Parameters:
  ProjectName:
    Type: String

  VPCCidr:
    Type: String
    Default: 10.0.0.0/16

  PublicWebSubnet1Cidr:
    Type: String
    Default: 10.0.1.0/24

  PublicWebSubnet2Cidr:
    Type: String
    Default: 10.0.2.0/24

  DBSubnet1Cidr:
    Type: String
    Default: 10.0.11.0/24

  DBSubnet2Cidr:
    Type: String
    Default: 10.0.12.0/24

Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidr
      EnableDnsSupport: true   # DNS解決をサポート
      EnableDnsHostnames: true # DNSホスト名を取得
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  # Public Web Subnets

  PublicWebSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      CidrBlock: !Ref PublicWebSubnet1Cidr
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-web-subnet-1

  PublicWebSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      CidrBlock: !Ref PublicWebSubnet2Cidr
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-web-subnet-2

  # Private DB Subnets

  DBSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1a
      CidrBlock: !Ref DBSubnet1Cidr
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-db-subnet-1

  DBSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-northeast-1c
      CidrBlock: !Ref DBSubnet2Cidr
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-db-subnet-2

  # Public RouteTables

  PublicWebRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-web-route-1

  PublicWebRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-public-web-route-2

  # Private RouteTables

  DBRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-db-route-1

  DBRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-db-route-2

  # Public Routing (to Internet)

  PublicWebRouteIGW1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicWebRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicWebRouteIGW2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicWebRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Private Routing

  # Public RouteTable Associate (Connect Subnet)

  PublicWebSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicWebSubnet1
      RouteTableId: !Ref PublicWebRouteTable1

  PublicWebSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicWebSubnet2
      RouteTableId: !Ref PublicWebRouteTable2

  # Private RouteTable Associate (Connect Subnet)

  DBSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet1
      RouteTableId: !Ref DBRouteTable1

  DBSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DBSubnet2
      RouteTableId: !Ref DBRouteTable2

Outputs:
  # VPC
  VPC:
    Value: !Ref VPC
    Export:
      Name: !Sub ${ProjectName}-vpc

  VPCCIDR:
    Value: !Ref VPCCidr
    Export:
      Name: !Sub ${ProjectName}-vpc-cidr

  # Subnet
  PublicWebSubnet1:
    Value: !Ref PublicWebSubnet1
    Export:
      Name: !Sub ${ProjectName}-public-web-subnet-1

  PublicWebSubnet1Cidr:
    Value: !Ref PublicWebSubnet1Cidr
    Export:
      Name: !Sub ${ProjectName}-public-web-subnet-1-cidr

  PublicWebSubnet2:
    Value: !Ref PublicWebSubnet2
    Export:
      Name: !Sub ${ProjectName}-public-web-subnet-2

  PublicWebSubnet2Cidr:
    Value: !Ref PublicWebSubnet2Cidr
    Export:
      Name: !Sub ${ProjectName}-public-web-subnet-2-cidr

  # db

  DBSubnet1:
    Value: !Ref DBSubnet1
    Export:
      Name: !Sub ${ProjectName}-db-subnet-1

  DBSubnet1Cidr:
    Value: !Ref DBSubnet1Cidr
    Export:
      Name: !Sub ${ProjectName}-db-subnet-1-cidr

  DBSubnet2:
    Value: !Ref DBSubnet2
    Export:
      Name: !Sub ${ProjectName}-db-subnet-2

  DBSubnet2Cidr:
    Value: !Ref DBSubnet2Cidr
    Export:
      Name: !Sub ${ProjectName}-db-subnet-2-cidr

  # Route

  PublicWebRouteTable1:
    Value: !Ref PublicWebRouteTable1
    Export:
      Name: !Sub ${ProjectName}-public-web-route-1

  PublicWebRouteTable2:
    Value: !Ref PublicWebRouteTable2
    Export:
      Name: !Sub ${ProjectName}-public-web-route-2

  DBRouteTable1:
    Value: !Ref DBRouteTable1
    Export:
      Name: !Sub ${ProjectName}-db-route-1

  DBRouteTable2:
    Value: !Ref DBRouteTable2
    Export:
      Name: !Sub ${ProjectName}-db-route-2
